
2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* general: added option dpc-in-data.

2020-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* general: added option vsam-status.

2020-03-31  Ron Norman <rjn@inglenet.com>

	* general: added option align-record and align-opt

2020-04-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option numeric-pointer *EXPERIMENTAL*

2020-03-27  Simon Sobisch <simonsobisch@gnu.org>

	* general: removed option "select-working" (see bug #421)

2020-03-31  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option special-names-clause

2020-02-13  Ron Norman <rjn@inglenet.com>

	* general: added option create_table

2020-01-22  Ron Norman <rjn@inglenet.com>

	* general: added option bdb_byteorder

2020-01-12  Simon Sobisch <simonsobisch@gnu.org>

	* general: bug #513 (partial) added sync-left-right

2020-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* general: added options assign-variable, assign-using-variable,
	  assign-ext-dyn and assign-disk-from.

2020-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #193 added same-as-clause

2019-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* general: changed assign-clause directives to use more descriptive
	  dynamic/external instead of mf/ibm.
	* general: added option implicit-assign-dynamic-var.

2019-09-30  Edward Hart <edward.dan.hart@gmail.com>

	* realia.words: Removed words belonging to other dialects - word list
	  now matches REALIA6.

2019-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* realia.conf, realia-strict.conf, realia.words, Makefile.am: added
	  dialect for CA Realia II.

2019-09-26  Ron Norman <rjn@inglenet.com>

	* general: added option reference-bounds-check

2019-09-22  Ron Norman <rjn@inglenet.com>

	* general: added option report-column-plus

2019-08-11  Simon Sobisch <simonsobisch@gnu.org>

	* general: added option hp-octal-literals

2019-06-08  Simon Sobisch <simonsobisch@gnu.org>
