@@ -1,6 +1,6 @@
 # GnuCOBOL runtime configuration
 #
-# Copyright (C) 2015-2019 Free Software Foundation, Inc.
+# Copyright (C) 2015-2020 Free Software Foundation, Inc.
 # Written by Simon Sobisch, Ron Norman
 #
 # This file is part of the GnuCOBOL runtime.
@@ -477,6 +477,16 @@
 #          Default:  true
 #          Example:  keycheck = off
 
+# Environment name:  COB_DUPS_AHEAD
+#   Parameter name:  dups_ahead
+#          Purpose:  Should INDEXED file handler return status 02 for dups
+#             Type:  -- choice of values ---
+#                    default - yes, if the low level I/O routine handles it
+#                    never   - Even if 02 is return from xISAM, ignore it
+#                    always  - fisam/foci/fodbc should do extra work to compute
+#          Default:  default 
+#          Example:  dups_ahead = never
+
 # Environment name:  COB_SYNC
 #   Parameter name:  sync
 #          Purpose:  Should the file be synced to disk after each write/update
@@ -703,6 +713,7 @@
 #  ---- For INDEXED files -----
 # format=ixhandler  INDEXED file format: CISAM,DISAM,VBISAM,BDB,LMDB,OCI,ODBC
 # format=auto   INDEXED file format is determined by inspecting the file
+# dups_ahead=   default,never,always
 # nkeys=n       number of indexes
 # key1=(loc:len)     loc (zero relative) of key, len of key
 # key2=(loc:len,loc:len ...)     define composite index
