@@ -1,4 +1,8 @@
 
+2020-10-19  Ron Norman <rjn@inglenet.com>
+
+	* fileio: added option dups_ahead for INDEXED files
+
 2020-07-17  Edward Hart <edward.dan.hart@gmail.com>
 
 	* general: added option dpc-in-data.
